# Water-ICM

./: README.md
Axelar-Fantom-destination-chain/axelar-Water-ICM/: .prettierrc
BSC-Smart-Contract-Implement/social-drone-data-framework-apt-livepeer/: README.md
Layer2-scaling/dao-tooling/: README.md
Layer2-scaling/data-dao/: README.md
Layer2-scaling/hardhat-zksync/: README.md
Layer2-scaling/metis-rfp-dao-nft-voting/: README.md
Layer2-scaling/mobility-scaling-using-hybrid-compute-boba/: README.md
Layer2-scaling/onyx-ssi-sdk-modules/: .env.example  .eslintrc.yml  .gitignore  NOTICE  README.md  config.ts  package-lock.json  package.json  tsconfig.json
Layer2-scaling/uav-drone-fvm-nft-nfc-tags/: README.md
Layer2-scaling/wasm-contract-work/: README.md
Layer2-scaling/zksync-account-abstraction-drone-delivery-payment/: README.md
NFT.Storage-incidents-alarm/push-incidents-notification/: README.md
Solution-Model-ICM-Planner/: Steps to run the project.docx
Solution-Model-ICM-Planner/pallet-assets-chain-extension/: Cargo.toml  README.md
Solution-Model-ICM-Planner/pallet-assets-chain-extension/src/: ink.rs  substrate.rs  traits.rs
Spare-Parts-Marketplace-Lens/: README.md  context.js  next.config.js  package-lock.json  package.json
drone-drivers-service-payout/: README.md
fvm-drone-incident-data-dao/: README.md
moon-sdk/: .gitignore  .prettierignore  LICENSE.md  README.md  migrations.json  nx.json  package-lock.json  package.json  pnpm-lock.yaml
simulator-metaverse-module/: .env.example  README.md  args.js  hardhat.config.ts  package.json
(+685 files in other folders)
